syntax = "proto3";

message ChatMessage {
  string message = 1;
  int32 from_user_id = 2;
  int32 to_user_id = 3;
}